Z-indexes correct for projectSection

--- a/src/BackgroundDesign/BackgroundDesign.module.scss
+++ b/src/BackgroundDesign/BackgroundDesign.module.scss
@@ -6,7 +6,8 @@ $light-color: #fff;
 .Body{
     height:100%;
     width: 100%;
-    position: relative;
+    position: absolute;
+    z-index: 10;
     background-color: $light-color;
     top:-100px;
 
@@ -14,9 +15,9 @@ $light-color: #fff;
         min-height: 1500px;
         max-width: 100vw;
         background-repeat: no-repeat;
-        z-index: 20;
-        position: absolute;
-        top: 0px;
+        z-index: 10;
+        position: relative;
+        top: -100px;
     }
 
     .OuterCircle{
@@ -27,7 +28,7 @@ $light-color: #fff;
         top: -50vw;
         left: -50vw;
         border-radius: 50%;
-        z-index: 10;
+        z-index: 0;
         display: flex;
         justify-content: center;
         align-items: center;
