--- a/src/MainLayout/MainLayout.module.scss
+++ b/src/MainLayout/MainLayout.module.scss
@@ -9,9 +9,9 @@ $light-color: #fff;
     width: 100%;
     // background-color: pink;
     // opacity: 50%;
-    z-index: 30;
-    // position: relative;
+    
+    // position: absolute;
     display: flex;
     flex-direction: column;
-    padding: 0px 20px;
+    // padding: 0px 20px;
 }
