--- a/src/Navbar/Navbar.module.scss
+++ b/src/Navbar/Navbar.module.scss
@@ -13,7 +13,25 @@ $light-color: #fff;
     top: 0px;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
+
+    .LogoCircle{
+        background-color: $light-color;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+       
+        margin-left: 15px;
+        a{
+            text-decoration: none;
+            color: $dark-color;
+            height: 100%;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }
 
     ul{
         display: flex;
